--- a/login/index.html
+++ b/login/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../global.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,7 +68,8 @@
 
         <!-- SCRIPTS -->
 
-
+<!-- link do loading -->
+<script src="../loading/loading.js"></script>
 
 <!-- Conecta ao banco de dados -->
 <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-app-compat.js"></script>
